--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -15,6 +15,9 @@
       <li>
         <p class="poor-ui-navigation" onclick="window.open('https://devcenter.heroku.com/articles/how-heroku-works')"><span class="glyphicon glyphicon-user"></span> How Heroku Works</p>
       </li>
+      <li>
+        <p class="poor-ui-navigation" onclick="window.open('/views/pages/test.html')"><span class="glyphicon glyphicon-user"></span> How Heroku Works</p>
+      </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
